<resources>
    <string name="app_name">Persewaan Canopy Wedding</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_menu_1">Koleksi</string>
    <string name="text_menu_2">Status</string>
    <string name="text_menu_3">Profil</string>
    <string name="text_search">Cari sesuatu disini ...</string>
    <string name="text_information">Informasi</string>
    <string name="title_activity_koleksi">KoleksiActivity</string>
</resources>